ingress/ingress.prod.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - selfequalsthis.io
    - graphql.selfequalsthis.io
    secretName: echo-tls
  rules:
    - host: selfequalsthis.io
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
    - host: graphql.selfequalsthis.io
      http:
        paths:
          - backend:
              serviceName: qsapi
              servicePort: 80
